Correction de l'affectation des segments

--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -401,6 +401,8 @@ function retrieveInfoDossier($segment, $dossierInfos) {
                                     $segmentTableau->merge();
                                 }
                             }
+
+                            $segmentTableau = null;
                         } else {
                             foreach ($champ['FILS'] as $champFils) {
                                 if ('Case à cocher' === $champFils['TYPE']) {
